# codex-transcripts

./: .gitignore  README.md  go.mod  pyproject.toml
cmd/codex-transcriptsd/: favorites.go  favorites_test.go  main.go
contrib/launchd/: com.codex-transcriptsd.plist.example
internal/sanitize/: sanitize.go  sanitize_test.go
src/codex_transcripts/: __init__.py
src/codex_transcripts/templates/: base.html  index.html  macros.html  master_index.html  page.html  project_index.html
tests/: sample_session.jsonl  test_all.py  test_generate_html.py
